kubernetes/gateway/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo
  namespace: demo
spec:
  parentRefs:
    - name: demo
  hostnames:
    - demo.test
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v2
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /
      backendRefs:
        - name: demo-v2
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: demo-v1
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: canary
  namespace: demo
spec:
  parentRefs:
    - name: demo
  hostnames:
    - canary.test
  rules:
    - backendRefs:
        - name: demo-v1
          port: 80
          weight: 90
        - name: demo-v2
          port: 80
          weight: 10
